--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@testing-library/user-event": "^13.5.0",
     "ag-grid-community": "^28.2.1",
     "ag-grid-react": "^28.2.1",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.5.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
